# QuantStack

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pip-audit-known-vulnerabilities  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CTO_AUDIT_FINDINGS.md  Dockerfile  Dockerfile.finrl  LICENSE  README.md  alembic.ini  docker-compose.yml  litellm_config.yaml  manifest  pyproject.toml  report.sh  start.sh  status.sh  stop.sh
.claude/: settings.json  settings.json.example
.claude/agents/: alpha-research.md  community-intel.md  daily-planner.md  data-scientist.md  earnings-analyst.md  execution-researcher.md  execution.md  fund-manager.md  market-intel.md  ml-scientist.md  options-analyst.md  position-monitor.md  quant-researcher.md  risk.md  strategy-rd.md  trade-debater.md  trade-reflector.md  watchlist.md
.claude/memory/: agent_performance.md  heartbeats.jsonl  lit_review_findings.md  ml_experiment_log.md  ml_model_registry.md  ml_research_program.md  regime_history.md  research_results_etf_gen_final.json  research_results_etf_gen_v2.json  research_results_etf_generalization.json  session_handoffs.md  strategy_registry.md  trade_journal.md  workshop_lessons.md
.claude/skills/: README.md  compact_memory.md  decode.md  deep_analysis.md  earnings.md  invest.md  lit_review.md  meta.md  morning.md  options.md  reflect.md  register-ticker.md  review.md  trade.md  tune.md  update-data.md  workshop.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled  release.yml  release.yml.disabled
CTO_ONBOARDING_AUDIT/: 00_EXECUTIVE_BRIEFING.md  01_SAFETY_HARDENING.md  02_STATISTICAL_VALIDITY.md  03_EXECUTION_LAYER.md  04_OPERATIONAL_RESILIENCE.md  05_GRAPH_RESTRUCTURING.md  06_AGENT_ARCHITECTURE.md  07_FEEDBACK_LOOPS.md  08_COST_OPTIMIZATION.md  09_DATA_SIGNALS.md  10_ADVANCED_RESEARCH.md  11_IMPLEMENTATION_ROADMAP.md  12_APPENDIX_ALL_FINDINGS.md  README.md
CTO_ONBOARDING_AUDIT/specs/: README.md  phase_0_quick_wins.md  phase_10_advanced_research.md  phase_1_safety_hardening.md  phase_2_statistical_validity.md  phase_3_operational_resilience.md  phase_4_agent_architecture.md  phase_5_cost_optimization.md  phase_6_execution_layer.md  phase_7_feedback_loops.md  phase_8_data_pipeline.md  phase_9_missing_roles_scale.md
adapters/alpaca_mcp/: __init__.py  client.py  server.py
adapters/etrade_mcp/: server.py
adapters/ibkr_mcp/: connection.py  server.py
alembic/: env.py
alembic/versions/: 001_baseline.py  002_add_rate_limit_buckets.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: litellm_router.yaml
config/fluent-bit/: fluent-bit.conf  parsers.conf
config/loki/: loki-config.yaml
config/prometheus/: prometheus.yml
docs/: BLITZ_MODE_COMPLETE.md  BLITZ_MODE_FIXES.md  BLITZ_MODE_IMPLEMENTATION.md  OPTIMIZATION.md  OPTIONS_ANALYST_SUMMARY.md  QQQ_OPTIONS_6REGIMES_COMPLETE.md  alphavantage_api.md  build_vs_buy_package_research.md  feature-flag-rollout-plan.md  ops-runbook.md
docs/api/: index.md
docs/architecture/: README.md  database_schema.md  graphs.md  llm_routing.md  mcp_servers.md  quant_arena.md  quant_pod.md  quantcore.md  signal_engine.md  tools.md
docs/crewai_docs_md/: crawl_index.json  docs_crewai_com_en_api-reference_inputs.md  docs_crewai_com_en_api-reference_introduction.md  docs_crewai_com_en_api-reference_kickoff.md  docs_crewai_com_en_api-reference_resume.md  docs_crewai_com_en_api-reference_status.md  docs_crewai_com_en_changelog.md  docs_crewai_com_en_concepts_agents.md  docs_crewai_com_en_concepts_cli.md  docs_crewai_com_en_concepts_collaboration.md  docs_crewai_com_en_concepts_crews.md  docs_crewai_com_en_concepts_event-listener.md  docs_crewai_com_en_concepts_flows.md  docs_crewai_com_en_concepts_knowledge.md  docs_crewai_com_en_concepts_llms.md  docs_crewai_com_en_concepts_memory.md  docs_crewai_com_en_concepts_planning.md  docs_crewai_com_en_concepts_processes.md  docs_crewai_com_en_concepts_reasoning.md  docs_crewai_com_en_concepts_tasks.md  docs_crewai_com_en_concepts_testing.md  docs_crewai_com_en_concepts_tools.md  docs_crewai_com_en_concepts_training.md  docs_crewai_com_en_enterprise_features_agent-repositories.md  docs_crewai_com_en_enterprise_features_automations.md  docs_crewai_com_en_enterprise_features_crew-studio.md  docs_crewai_com_en_enterprise_features_hallucination-guardrail.md  docs_crewai_com_en_enterprise_features_marketplace.md  (+199 more)
docs/guides/: contributing.md  (+3 more)
planning/: crewai-migration-spec.md  langgraph-migration-spec.md
prompts/: ARCHITECTURE.md  autoresearch.md  context_loading.md  live_trader.md  ml_research.md  ralph_research.md  research_equity_investment.md  research_equity_swing.md  research_loop.md  research_options.md  research_orchestrator.md  research_shared.md  strategy_factory.md  trading_loop.md  trading_operator.md
scripts/: README.md  acquire_historical_data.py  add_domain_decorators.py  autoresclaw_runner.py  backup.sh  bootstrap_and_simulate.py  bootstrap_rl_training.py  check_ollama_health.py  dashboard.py  db_repair.py  design_qqq_options_6regimes.py  docker-entrypoint.sh  ewf_analyzer.py  ewf_scraper.py  fetch_vix_data.py  heartbeat.sh  iron_condor_backtest.py  log_decision.py  measure_tool_token_overhead.py  migrate_chromadb_to_pgvector.py  notify_discord.py  research_qqq_swing.py  research_worker.sh  run_historical_quant_arena.sh  run_intraday.py  run_research_loop.sh  run_trading_loop.sh  run_trading_pipeline.py  scheduler.py  setup_checkpoints.py  start_loops.sh  start_research_loop.sh  start_supervised_loops.sh  start_trading_loop.sh  system_audit.py  validate_brief_quality.py  validate_coordination.py  validate_server_tool_use.py  validate_tool_descriptions.py  vrp_direction_model.py
specs/: 24x7_readiness.md
src/: README.md
tests/: conftest.py  test_credit_assignment.py  test_hypothesis_judge.py  test_opro_loop.py  test_reflexion_memory.py  test_textgrad_loop.py  test_trajectory_evolution.py
(+2219 files in other folders)
