[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantcore"
version = "0.2.0"
description = "Quantitative Trading Research Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kshitij Bichave"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantitative", "trading", "backtesting", "finance", "machine-learning", "mcp"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "duckdb>=0.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
    "typing-extensions>=4.8.0",
    # ML - required because quantcore/__init__.py imports all submodules
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "shap>=0.42.0",
    "statsmodels>=0.14.0",
    # RL - required because quantcore/__init__.py imports rl submodule
    # >=2.6.0: fixes CVE-2025-32434 (CRITICAL), CVE-2024-31580, CVE-2024-31583
    "torch>=2.6.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "shimmy>=1.3.0",
    # Viz - required for visualization imports
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Multi-agent framework
    "crewai[anthropic]>=1.7.0",
    # MCP
    "fastmcp>=0.1.0",
    # API server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0.0",
    "litellm>=1.82.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.90.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "mcp>=1.0.0",
]
# Scheduler (Enhancement 4) — optional, required only if using scripts/scheduler.py
scheduler = [
    "apscheduler>=3.10.0",
]
# Data provider extras — install only what you use
alpaca = [
    "alpaca-py>=0.20.0",
]
polygon = [
    "polygon-api-client>=1.12.0",
]
ibkr = [
    "ib_insync>=0.9.86",
]
# LLM providers — install the one(s) you need
bedrock = [
    "boto3>=1.34.0",
]
anthropic-llm = [
    "anthropic>=0.40.0",
]
vertex-ai = [
    "google-cloud-aiplatform>=1.60.0",
]
# Groq, Together AI, Fireworks, Mistral, Gemini, Azure OpenAI — no extra packages
# needed; LiteLLM routes them over HTTP using only an API key.

# Convenience bundles
all-providers = [
    "quantcore[alpaca,polygon,ibkr]",
]
all-llm = [
    "quantcore[bedrock,anthropic-llm,vertex-ai]",
]
all = [
    "quantcore[dev,all-providers,all-llm]",
]

[project.scripts]
quantcore-mcp    = "quantcore.mcp.server:main"
alpaca-mcp       = "alpaca_mcp.server:main"
ibkr-mcp         = "ibkr_mcp.server:main"
etrade-mcp       = "etrade_mcp.server:main"
quantpod-mcp     = "quant_pod.mcp.server:main"
quantpod-api     = "quant_pod.api.server:app"
quantpod-monitor = "quant_pod.flows.intraday_monitor_flow:main"

[project.urls]
Homepage = "https://github.com/kbichave/QuantStack"
Documentation = "https://github.com/kbichave/QuantStack"
Repository = "https://github.com/kbichave/QuantStack.git"
Issues = "https://github.com/kbichave/QuantStack/issues"

[tool.setuptools.packages.find]
where = ["packages"]

[tool.setuptools.package-data]
quantcore = ["config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
# warn_return_any disabled: third-party libraries (crewai, fastmcp, duckdb)
# return Any in many places; enabling it generates ~125 false positives.

[[tool.mypy.overrides]]
# eTrade/IBKR broker modules use forward refs that mypy can't resolve without
# the live broker dependencies installed in the type-check environment.
module = [
    "quant_pod.execution.etrade_broker",
    "quant_pod.tools.etrade.*",
    "ibkr_mcp.*",
    "alpaca_mcp.*",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.90.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "mcp>=1.0.0",
    "pre-commit>=3.5.0",
    "coverage>=7.0.0",
]

[tool.uv]
# UV configuration for dependency management
# Use native TLS for better SSL compatibility (Zscaler, corporate proxies)
native-tls = true
# Security-driven lower bounds on transitive deps (Trivy CVE fixes)
constraint-dependencies = [
    "jaraco.context>=6.1.0",  # CVE-2026-23949
]

[tool.coverage.run]
# Omit modules that are untestable in a unit-test environment:
# - External API/broker adapters (require live credentials)
# - WebSocket streaming (require live connections)
# - GPU-dependent RL (require training data + GPU)
# - Full-system flows (require running MCP + broker stack)
# - External services (Discord, Mem0, knowledge stores)
# - Visualization (require display)
# - Entry-point scripts
# - MCP server (requires MCP client runtime to exercise)
# - LLM agents (require running LLM provider)
omit = [
    # External market-data adapters and fetchers (require live API keys)
    "packages/quantcore/data/adapters/*",
    "packages/quantcore/data/streaming/*",
    "packages/quantcore/data/polygon.py",
    "packages/quantcore/data/earnings.py",
    "packages/quantcore/data/economic_fetcher.py",
    "packages/quantcore/data/options_storage.py",
    "packages/quantcore/data/fetcher.py",
    "packages/quantcore/data/storage.py",
    "packages/quantcore/data/sec_edgar.py",
    "packages/quantcore/data/validator.py",
    "packages/quantcore/data/registry.py",
    # MCP server (only exercised via MCP client in integration tests)
    "packages/quantcore/mcp/server.py",
    # GPU/RL modules — all agent/environment/training code requires GPU + training loops
    "packages/quantcore/rl/options/*",
    "packages/quantcore/rl/base.py",
    "packages/quantcore/rl/data_bridge.py",
    "packages/quantcore/rl/training.py",
    "packages/quantcore/rl/orchestrator.py",
    "packages/quantcore/rl/execution/agent.py",
    "packages/quantcore/rl/execution/environment.py",
    "packages/quantcore/rl/meta/agent.py",
    "packages/quantcore/rl/meta/environment.py",
    "packages/quantcore/rl/sizing/agent.py",
    "packages/quantcore/rl/sizing/environment.py",
    "packages/quantcore/rl/spread/agent.py",
    # Specialised regime models (HMM/TFT — require large training data)
    "packages/quantcore/hierarchy/regime/hmm_model.py",
    "packages/quantcore/hierarchy/regime/tft_regime.py",
    # Options-specific modules (require options data)
    "packages/quantcore/backtesting/options_engine.py",
    "packages/quantcore/features/iv_calculator.py",
    "packages/quantcore/features/options_features.py",
    "packages/quantcore/risk/options_risk.py",
    "packages/quantcore/strategy/options_ml.py",
    "packages/quantcore/strategy/options_rules.py",
    # Commodity-specific modules
    "packages/quantcore/features/commodity/*",
    "packages/quantcore/features/commodity_factory.py",
    # Academic paper replications (no unit tests, verified analytically)
    "packages/quantcore/research/paper_replications/*",
    # Visualization (require display / large data)
    "packages/quantcore/visualization/options_plots.py",
    "packages/quantcore/visualization/trade_animation.py",
    "packages/quantcore/visualization/plots.py",
    "packages/quantcore/analysis/reporting.py",
    # Microstructure low-level (integration-tested via higher layers)
    "packages/quantcore/microstructure/events.py",
    "packages/quantcore/microstructure/filters.py",
    "packages/quantcore/microstructure/volume_profile.py",
    # Entry points
    "packages/quantcore/main.py",
    "packages/quantcore/mcp_server.py",
    # Live-execution modules (require running broker)
    "packages/quantcore/execution/paper_trading.py",
    "packages/quant_pod/execution/etrade_broker.py",
    "packages/quant_pod/execution/microstructure_pipeline.py",
    # eTrade tools (live broker OAuth + REST — integration only)
    "packages/quant_pod/tools/etrade/client.py",
    "packages/quant_pod/tools/etrade/auth.py",
    # FastAPI server (integration-tested via HTTP)
    "packages/quant_pod/api/server.py",
    # Full-system flows (require MCP + broker stack)
    "packages/quant_pod/flows/*",
    # External services
    "packages/quant_pod/tools/discord/*",
    "packages/quant_pod/tools/alphavantage_tools.py",
    "packages/quant_pod/memory/mem0_client.py",
    "packages/quant_pod/knowledge/store.py",
    "packages/quant_pod/knowledge/policy_store.py",
    # Live WebSocket adapters
    "packages/quant_pod/data/adapters/*",
    # LLM agents (require running LLM provider)
    "packages/quant_pod/agents/microstructure_signal_agent.py",
    "packages/quant_pod/agents/portfolio_optimizer_agent.py",
    "packages/quant_pod/agents/regime_detector.py",
    # MCP Pydantic models (only exercised via MCP integration tests)
    "packages/quant_pod/mcp/models.py",
    # Runtime state/orchestration (require live session data)
    "packages/quant_pod/mtf_context.py",
    "packages/quant_pod/holding_period.py",
    "packages/quant_pod/crews/regime_config.py",
    "packages/quant_pod/learning/calibration.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
