[build-system]
requires = ["setuptools>=61.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quantstack"
version = "1.0.0"
description = "Quantitative Trading Research Platform"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kshitij Bichave"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantitative", "trading", "backtesting", "finance", "machine-learning", "mcp"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "duckdb>=0.9.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
    "typing-extensions>=4.8.0",
    # ML - required because quantcore/__init__.py imports all submodules
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "shap>=0.42.0",
    "statsmodels>=0.14.0",
    "arch>=7.0.0",
    # RL - required because quantcore/__init__.py imports rl submodule
    # >=2.6.0: fixes CVE-2025-32434 (CRITICAL), CVE-2024-31580, CVE-2024-31583
    "torch>=2.6.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "shimmy>=1.3.0",
    "finrl>=0.3.5",
    # Viz - required for visualization imports
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # MCP
    "fastmcp>=0.1.0",
    # API server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0.0",
    "litellm>=1.82.2",
    "httpx>=0.27.0",
    "certifi>=2023.7.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # Data providers
    "alpaca-py>=0.20.0",
    "polygon-api-client>=1.12.0",
    "ib_insync>=0.9.86",
    # LLM providers
    "boto3>=1.34.0",
    "anthropic>=0.40.0",
    "google-cloud-aiplatform>=1.60.0",
    # Options pricing
    "financepy>=0.310",
    "py_vollib>=1.0.1",
    "py_vollib_vectorized>=0.1.0",
    "quantsbin>=1.0.3",
    # Optimization
    "optuna>=3.0",
    # Observability
    "prometheus-client>=0.19.0",
    "exchange-calendars>=4.5.0",
    # Additional
    "hmmlearn>=0.3.0",
    "ffn>=1.0.0",
    "Pillow>=10.0.0",
    "mem0ai>=0.1.0",
    "pysabr>=0.4.0",
    "langfuse>=2.0.0",
    "transformers>=4.30.0",
    "TA-Lib>=0.4.28",
    "joblib>=1.3.0",
    "websockets>=12.0",
    "fredapi>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.90.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
quantstack-mcp     = "quantstack.mcp.server:main"
alpaca-mcp       = "alpaca_mcp.server:main"
ibkr-mcp         = "ibkr_mcp.server:main"
etrade-mcp       = "etrade_mcp.server:main"
quantstack-api     = "quantstack.api.server:app"
quantstack-monitor = "quantstack.flows.intraday_monitor_flow:main"
quantstack-bootstrap = "quantstack.flows.bootstrap:main"
quantstack-log-decision = "quantstack.hooks.log_decision:main"
quantstack-validate-brief = "quantstack.hooks.validate_brief_quality:main"

[project.urls]
Homepage = "https://github.com/kbichave/QuantStack"
Documentation = "https://github.com/kbichave/QuantStack"
Repository = "https://github.com/kbichave/QuantStack.git"
Issues = "https://github.com/kbichave/QuantStack/issues"

[tool.setuptools.packages.find]
where = ["src", "adapters"]

[tool.setuptools.package-data]
quantstack = ["config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
# warn_return_any disabled: third-party libraries (fastmcp, duckdb, litellm)
# return Any in many places; enabling it generates ~125 false positives.

[[tool.mypy.overrides]]
# eTrade/IBKR broker modules use forward refs that mypy can't resolve without
# the live broker dependencies installed in the type-check environment.
module = [
    "quantstack.execution.etrade_broker",
    "quantstack.tools.etrade.*",
    "ibkr_mcp.*",
    "alpaca_mcp.*",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.90.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML>=6.0.0",
    "mcp>=1.0.0",
    "pre-commit>=3.5.0",
    "coverage>=7.0.0",
]

[tool.uv]
# UV configuration for dependency management
# Use native TLS for better SSL compatibility (Zscaler, corporate proxies)
native-tls = true
# Security-driven lower bounds on transitive deps (Trivy CVE fixes)
constraint-dependencies = [
    "jaraco.context>=6.1.0",  # CVE-2026-23949
]

[tool.coverage.run]
# Omit modules that are untestable in a unit-test environment:
# - External API/broker adapters (require live credentials)
# - WebSocket streaming (require live connections)
# - GPU-dependent RL (require training data + GPU)
# - Full-system flows (require running MCP + broker stack)
# - External services (Discord, Mem0, knowledge stores)
# - Visualization (require display)
# - Entry-point scripts
# - MCP server (requires MCP client runtime to exercise)
# - LLM agents (require running LLM provider)
omit = [
    # External market-data adapters and fetchers (require live API keys)
    "src/quantstack/data/adapters/*",
    "src/quantstack/data/streaming/*",
    "src/quantstack/data/polygon.py",
    "src/quantstack/data/earnings.py",
    "src/quantstack/data/economic_fetcher.py",
    "src/quantstack/data/options_storage.py",
    "src/quantstack/data/fetcher.py",
    "src/quantstack/data/storage.py",
    "src/quantstack/data/_schema.py",
    "src/quantstack/data/_ohlcv.py",
    "src/quantstack/data/_options_news.py",
    "src/quantstack/data/sec_edgar.py",
    "src/quantstack/data/validator.py",
    "src/quantstack/data/registry.py",
    # MCP server + tool modules (only exercised via MCP client in integration tests)
    "src/quantstack/mcp/server.py",
    "src/quantstack/mcp/tools/*",
    # FinRL modules (require GPU / SB3 training runtime)
    "src/quantstack/finrl/trainer.py",
    "src/quantstack/finrl/environments.py",
    "src/quantstack/finrl/data_adapter.py",
    "src/quantstack/finrl/stock_selector.py",
    # Specialised regime models (HMM/TFT)
    "src/quantstack/core/hierarchy/regime/hmm_model.py",
    "src/quantstack/core/hierarchy/regime/tft_regime.py",
    # Options-specific modules
    "src/quantstack/core/backtesting/options_engine.py",
    "src/quantstack/core/features/iv_calculator.py",
    "src/quantstack/core/features/options_features.py",
    "src/quantstack/core/risk/options_risk.py",
    "src/quantstack/core/strategy/options_ml.py",
    "src/quantstack/core/strategy/options_rules.py",
    # Commodity-specific modules
    "src/quantstack/core/features/commodity/*",
    "src/quantstack/core/features/commodity_factory.py",
    # Academic paper replications
    "src/quantstack/core/research/paper_replications/*",
    # Visualization
    "src/quantstack/core/visualization/options_plots.py",
    "src/quantstack/core/visualization/trade_animation.py",
    "src/quantstack/core/visualization/plots.py",
    "src/quantstack/core/analysis/reporting.py",
    # Microstructure low-level
    "src/quantstack/core/microstructure/events.py",
    "src/quantstack/core/microstructure/filters.py",
    "src/quantstack/core/microstructure/volume_profile.py",
    # Entry points
    "src/quantstack/core/main.py",
    "src/quantstack/core/mcp_server.py",
    # Live-execution modules
    "src/quantstack/core/execution/paper_trading.py",
    "src/quantstack/execution/etrade_broker.py",
    "src/quantstack/execution/microstructure_pipeline.py",
    # eTrade tools
    "src/quantstack/tools/etrade/client.py",
    "src/quantstack/tools/etrade/auth.py",
    # FastAPI server
    "src/quantstack/api/server.py",
    # Full-system flows
    "src/quantstack/flows/*",
    # External services
    "src/quantstack/tools/discord/*",
    "src/quantstack/tools/alphavantage_tools.py",
    "src/quantstack/memory/mem0_client.py",
    "src/quantstack/knowledge/store.py",
    "src/quantstack/knowledge/_schema.py",
    "src/quantstack/knowledge/_trades.py",
    "src/quantstack/knowledge/_waves_regime.py",
    "src/quantstack/knowledge/_messages.py",
    "src/quantstack/knowledge/_performance.py",
    "src/quantstack/knowledge/_learning.py",
    "src/quantstack/knowledge/policy_store.py",
    # Live WebSocket adapters
    "src/quantstack/data/adapters/*",
    # LLM agents
    "src/quantstack/agents/microstructure_signal_agent.py",
    "src/quantstack/agents/portfolio_optimizer_agent.py",
    "src/quantstack/agents/regime_detector.py",
    # MCP state/models
    "src/quantstack/mcp/models.py",
    "src/quantstack/mcp/_state.py",
    # Runtime state/orchestration
    "src/quantstack/mtf_context.py",
    "src/quantstack/holding_period.py",
    "src/quantstack/crews/regime_config.py",
    "src/quantstack/learning/calibration.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "src/quantstack/core/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
